added readme.txt and @RestController annotation.
Refactored entity fields.
Removed validation annotations in entity, since they threw axceptions.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=rockband_song_manager
 # Database connection properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/rockband_pocket_manager
 spring.datasource.username=developer
-spring.datasource.password=developer
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA properties
